sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.error
AlgShellSort:12: error: not found: value max
			j=max(j-ecart,0)
                          ^