sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.code
def shellSort()  {
var ecart:Int=getNombreValeurs/2
while (ecart>=1) {
	var v:Int=0
	var j:Int=0
	for ( i<- 1 to getNombreValeurs-1) {
		v=getValeur(i)
		j=i
		while (j!=0 && getValeur(j-ecart)>v) {
			setValeur(j,getValeur(j-ecart))
			j=max(j-ecart,0)
		}
		setValeur(j,v)
	}
	ecart=ecart/2
}
}
